--- a/.github/workflows/compute-cluster-deploy.yml
+++ b/.github/workflows/compute-cluster-deploy.yml
@@ -239,14 +239,9 @@ jobs:
                 volumeMounts:
                 - name: zookeeper-storage
                   mountPath: /var/lib/zookeeper
-          volumeClaimTemplates:
-          - metadata:
-              name: zookeeper-storage
-            spec:
-              accessModes: ["ReadWriteOnce"]
-              resources:
-                requests:
-                  storage: 10Gi
+          volumes:
+          - name: zookeeper-storage
+            emptyDir: {}
         ---
         apiVersion: v1
         kind: Service
@@ -270,7 +265,7 @@ jobs:
           namespace: smart-factory-compute
         spec:
           serviceName: "kafka-service"
-          replicas: 2
+          replicas: 1
           selector:
             matchLabels:
               app: kafka
@@ -279,6 +274,10 @@ jobs:
               labels:
                 app: kafka
             spec:
+              initContainers:
+              - name: wait-for-zk
+                image: busybox:1.36
+                command: ['sh','-c','until nc -z zookeeper-service 2181; do echo waiting for zk; sleep 2; done']
               containers:
               - name: kafka
                 image: confluentinc/cp-kafka:7.4.0
@@ -286,12 +285,12 @@ jobs:
                 - containerPort: 9092
                 - containerPort: 9093
                 env:
-                - name: KAFKA_BROKER_ID
-                  valueFrom:
-                    fieldRef:
-                      fieldPath: metadata.name
+                - name: KAFKA_BROKER_ID_COMMAND
+                  value: "hostname | awk -F '-' '{print $NF}'"
                 - name: KAFKA_ZOOKEEPER_CONNECT
                   value: "zookeeper-service:2181"
+                - name: KAFKA_LISTENERS
+                  value: "PLAINTEXT://:9092,EXTERNAL://:9093"
                 - name: KAFKA_ADVERTISED_LISTENERS
                   value: "PLAINTEXT://$(POD_NAME).kafka-service:9092,EXTERNAL://$(POD_IP):9093"
                 - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
@@ -299,11 +298,11 @@ jobs:
                 - name: KAFKA_INTER_BROKER_LISTENER_NAME
                   value: "PLAINTEXT"
                 - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
-                  value: "2"
+                  value: "1"
                 - name: KAFKA_NUM_PARTITIONS
                   value: "3"
                 - name: KAFKA_DEFAULT_REPLICATION_FACTOR
-                  value: "2"
+                  value: "1"
                 - name: POD_NAME
                   valueFrom:
                     fieldRef:
@@ -322,14 +321,12 @@ jobs:
                 volumeMounts:
                 - name: kafka-storage
                   mountPath: /var/lib/kafka
-          volumeClaimTemplates:
-          - metadata:
-              name: kafka-storage
-            spec:
-              accessModes: ["ReadWriteOnce"]
-              resources:
-                requests:
-                  storage: 20Gi
+          volumes:
+          - name: kafka-storage
+            emptyDir: {}
+          podManagementPolicy: Parallel
+          updateStrategy:
+            type: RollingUpdate
         ---
         apiVersion: v1
         kind: Service
@@ -465,8 +462,13 @@ jobs:
         
         kubectl apply -f k8s/compute-kafka.yaml
         
-        # Kafka StatefulSet 롤아웃이 완료될 때까지 대기
-        kubectl rollout status statefulset/kafka -n smart-factory-compute --timeout=600s
+        # Kafka StatefulSet 롤아웃이 완료될 때까지 대기 (pod ready 기반 폴백 포함)
+        if ! kubectl rollout status statefulset/kafka -n smart-factory-compute --timeout=600s; then
+          echo "rollout status timed out, waiting for at least 1 ready pod..."
+          kubectl wait --for=condition=ready pod -l app=kafka -n smart-factory-compute --timeout=300s || true
+          kubectl get pods -n smart-factory-compute -o wide
+          kubectl describe pods -l app=kafka -n smart-factory-compute | sed -n '1,200p'
+        fi
         
         # AI 모델 서비스 배포
         kubectl apply -f k8s/compute-ai-service.yaml
