--- a/.github/workflows/compute-cluster-deploy.yml
+++ b/.github/workflows/compute-cluster-deploy.yml
@@ -239,9 +239,9 @@ jobs:
                 volumeMounts:
                 - name: zookeeper-storage
                   mountPath: /var/lib/zookeeper
-          volumes:
-          - name: zookeeper-storage
-            emptyDir: {}
+              volumes:
+              - name: zookeeper-storage
+                emptyDir: {}
         ---
         apiVersion: v1
         kind: Service
@@ -285,14 +285,14 @@ jobs:
                 - containerPort: 9092
                 - containerPort: 9093
                 env:
-                - name: KAFKA_BROKER_ID_COMMAND
-                  value: "hostname | awk -F '-' '{print $NF}'"
+                - name: KAFKA_BROKER_ID
+                  value: "1"
                 - name: KAFKA_ZOOKEEPER_CONNECT
                   value: "zookeeper-service:2181"
                 - name: KAFKA_LISTENERS
                   value: "PLAINTEXT://:9092,EXTERNAL://:9093"
                 - name: KAFKA_ADVERTISED_LISTENERS
-                  value: "PLAINTEXT://$(POD_NAME).kafka-service:9092,EXTERNAL://$(POD_IP):9093"
+                  value: "PLAINTEXT://kafka-service:9092,EXTERNAL://$(POD_IP):9093"
                 - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
                   value: "PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT"
                 - name: KAFKA_INTER_BROKER_LISTENER_NAME
@@ -321,9 +321,9 @@ jobs:
                 volumeMounts:
                 - name: kafka-storage
                   mountPath: /var/lib/kafka
-          volumes:
-          - name: kafka-storage
-            emptyDir: {}
+              volumes:
+              - name: kafka-storage
+                emptyDir: {}
           podManagementPolicy: Parallel
           updateStrategy:
             type: RollingUpdate
